--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Clearly, the possibility of life makes Europa a very interesting target. Needless to say, that is what we wanted to work on. Afterall, if we find life on
             Europa, however small and primitive may it be, it will tell us one thing very clearly - if life can happen, it will happen. And our whole universe must be
             beaming with life. But good data, if any regarding organics in Europa is impossible to find! Hence, we are settling down for another question that comes 
-            to our mind - Why are those scared red, though? 
+            to our mind - Why are those scars red, though? 
         </p>
     
         <br>
