--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             <li>
                 <strong>2011:</strong> Spatially Resolved Spectroscopy of Europa: The Distinct Spectrum of Large-scale Chaos, Geissler et al
             </li>
+            <li>
+                <strong>2019:</strong> Sodium chloride on the surface of Europa, Trumbo et al
+            </li>
         </ul>
 
         <br>
