--- a/index.html
+++ b/index.html
@@ -211,9 +211,8 @@
 
         <p>
             The Neural Networks will be coded by both of us. Rion will look for more spectroscopy data in space based telesccopes while Nishant will for them in 
-            ground based ones. The presentations will be made by Rion and the website will be developed by Nishant. For Classifying the Lineas, Rion shall work 
-            work on classification based on age using DBSCAN while Nishant works on classifying based on geographical features using K Means. We will need (a lot of 
-            help) from our mentor, Guneshwar Sir, especially in the second part.
+            ground based ones. For Classifying the Lineas, Rion shall work on classification based on age using DBSCAN while Nishant works on classifying based 
+            on geographical features using K Means. We will need (a lot of help) from our mentor, Guneshwar Sir, especially in the second part.
         </p>
 
             
