--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+
     <h2 class="heading">
         What kind of salts are present on the Lineas of Europa?
     </h2>
@@ -22,7 +23,7 @@
             Europa
         </h1>
         <p class="quote">
-            "There might be octopuses swimming in the depths of Europa, for all we know" - Nishant to Rion</p>
+            "There might be octopuses swimming in the depths of Europa, for all we know" - Nishant to Rion.</p>
     
         <p>
             Water, some esssential chemicals and a source of energy. That's all life needs, these are the "ingredients" for life. Europa, an icy moon of Jupyter, 
