--- a/proposal.html
+++ b/proposal.html
@@ -13,7 +13,7 @@
     <h2 class="heading">
         What kind of salts are present on the Lineas of Europa?
     </h2>
-    <a class = "link" href="index.html">Midway Updates</a>
+    <a class = "link" href="index.html">Final Report</a>
     <img src="images/europa.jpg" alt="europa images here">
 
     
